--- a/index.html
+++ b/index.html
@@ -9,15 +9,40 @@
 </head>
 <body>
     <div class="container">
-
-        <div class="model sinistra">
-            
+       <div>
+         <div class="model sinistra">
+            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/1.webp" alt="">
+            <span class="heart">&hearts;</span>
+            <span class="sconto">-50%</span>
+            <span class="eco">Sostenibiità</span>
         </div>
-        <div class="model centro"></div>
-        <div class="model destra"></div>
-        <div class="model sinistra"></div>
-        <div class="model centro"></div>
-        <div class="model destra"></div>
+        <div class="model centro">
+            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/2.webp" alt="">
+            <span class="heart">&hearts;</span>
+            <span class="sconto">-30%</span>
+            <span class="eco">Sostenibiità</span>
+        </div>
+        <div class="model destra">
+            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/3.webp" alt="">
+            <span class="heart">&hearts;</span>
+            <span class="sconto">-30%</span>
+            <span class="eco">Sostenibiità</span>
+        </div>
+        <div class="model sinistra">
+            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/4.webp" alt="">
+            <span class="heart">&hearts;</span>
+            <span class="sconto">-50%</span>
+            <span class="eco">Sostenibiità</span>
+        </div>
+        <div class="model centro">
+            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/5.webp" alt="">
+            <span class="heart">&hearts;</span>
+        </div>
+        <div class="model destra">
+            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/6b.webp" alt="">
+            <span class="heart">&hearts;</span>
+            <span class="eco solo">Sostenibiità</span>
+        </div>
 
     </div>
 </body>
