--- a/index.html
+++ b/index.html
@@ -11,37 +11,71 @@
     <div class="container">
        <div>
          <div class="model sinistra">
-            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/1.webp" alt="">
+            <img class="variante" src="img/1.webp" alt="">
+            <img class="originale" src="img/1b.webp" alt="">
             <span class="heart">&hearts;</span>
             <span class="sconto">-50%</span>
-            <span class="eco">Sostenibiità</span>
+            <span class="eco">Sostenibilità</span>
+            <div class="descrizione">
+                <h2>Levi's</h2>
+                <h1>RELAXED FIT TEE UNISEX</h1>
+                <p> <strong>14,99&euro;</strong>  <del>29,99&euro;</del></p>
+            </div>
         </div>
         <div class="model centro">
-            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/2.webp" alt="">
+            <img class="variante" src="img/2.webp" alt="">
+            <img src="img/2b.webp" alt="">
             <span class="heart">&hearts;</span>
             <span class="sconto">-30%</span>
-            <span class="eco">Sostenibiità</span>
+            <div class="descrizione">
+                <h2>Guess</h2>
+                <h1>ROSES TEE</h1>
+                <p><strong>20,99&euro;</strong> <del>29,99&euro;</del></p>
+            </div>
         </div>
         <div class="model destra">
-            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/3.webp" alt="">
+            <img class="variante" src="img/3.webp" alt="">
+            <img src="img/3b.webp" alt="">
             <span class="heart">&hearts;</span>
             <span class="sconto">-30%</span>
-            <span class="eco">Sostenibiità</span>
+            <div class="descrizione">
+                <h2>Come Zucchero Filato</h2>
+                <h1>VOGLIA DI COLORE PASTELLO</h1>
+                <p><strong>129,99&euro;</strong></p>
+            </div>
         </div>
         <div class="model sinistra">
-            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/4.webp" alt="">
+            <img class="variante" src="img/4.webp" alt="">
+            <img src="img/4b.webp" alt="">
             <span class="heart">&hearts;</span>
             <span class="sconto">-50%</span>
-            <span class="eco">Sostenibiità</span>
+            <span class="eco">Sostenibilità</span>
+            <div class="descrizione">
+                <h2>Levi's</h2>
+                <h1>TEE UNISEX</h1>
+                <p><strong>14,99&euro; </strong><del> 29,99&euro;</del></p>
+            </div>
         </div>
         <div class="model centro">
-            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/5.webp" alt="">
+            <img class="variante" src="img/5.webp" alt="">
+            <img src="img/5b.webp" alt="">
             <span class="heart">&hearts;</span>
+            <div class="descrizione">
+                <h2>Maya Deluxe</h2>
+                <h1>STRIPE BODICE</h1>
+                <p><strong>99,99&euro;</p>
+            </div>
         </div>
         <div class="model destra">
-            <img src="file:///C:/Users/robin/OneDrive/Desktop/Boolean/Esercizio%207%20Boolando/html-css-boolando/img/6b.webp" alt="">
+            <img class="variante" src="img/6.webp" alt="">
+            <img src="img/6b.webp" alt="">
             <span class="heart">&hearts;</span>
-            <span class="eco solo">Sostenibiità</span>
+            <span class="eco solo">Sostenibilità</span>
+            <div class="descrizione">
+                <h2>Esprit</h2>
+                <h1>MAGLIONE - BLACK</h1>
+                <p><strong>29,99&euro; </strong></p>
+            </div>
         </div>
 
     </div>
